--- a/lec1/2-01.html
+++ b/lec1/2-01.html
@@ -6,6 +6,6 @@
     <title>ยินดีต้อนรับเข้าสู่เว็บไซต์ของเรา</title>
 </head>
 <body>
-    ทดสอบการสร้างหัวเรื่อง(Title)
+    ทดสอบการสร้างหัวเรื่อง(TITLE)
 </body>
 </html>
